[package]
name = "adventofcode2020"
version = "0.1.0"
authors = ["Robert Brignull <robertbrignull@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.2"

[[bin]]
name = "adventofcode2020"
path = "main.rs"
